@@ -535,8 +535,8 @@ class TestRipper::ScannerEvents < Test::Unit::TestCase
                  scan('op', ':[]')
     assert_equal ['[]='],
                  scan('op', ':[]=')
-    assert_equal ['.?'],
-                 scan('op', 'a.?f')
+    assert_equal ['&.'],
+                 scan('op', 'a&.f')
     assert_equal [],
                  scan('op', %q[`make all`])
   end
