@@ -181,7 +181,7 @@ class TestISeq < Test::Unit::TestCase
   end
 
   def test_safe_call_chain
-    src = "a.?a.?a.?a.?a.?a"
+    src = "a&.a&.a&.a&.a&.a"
     body = compile(src, __LINE__, {peephole_optimization: true}).to_a[13]
     labels = body.select {|op, arg| op == :branchnil}.map {|op, arg| arg}
     assert_equal(1, labels.uniq.size)
